BASE = \
	base/core.lua \
	base/entities/bomn.lua \
	base/entities/crate.lua \
	base/entities/dude.lua \
	base/entities/entities.lua \
	base/entities/entity.lua \
	base/entities/super.lua \
	base/generate.lua \
	base/init.lua \
	base/object.lua \
	base/serial.lua \
	base/sprites/blast.lua \
	base/sprites/sprite.lua \
	base/sync.lua \
	base/util.lua
GFX = gfx/sprites.png
TTF = ttf/Vera.ttf

nobase_dist_pkgdata_DATA = $(BASE) $(GFX) $(TTF)
